--- a/guessing-game/Cargo.toml
+++ b/guessing-game/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 colored = "2.1.0"
 dialoguer = "0.11.0"
+{ version = "0.7", features = ["fuzzy-select"] }
 rand = "0.8.5"
