--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -21,7 +21,7 @@ jobs:
               uses: actions/checkout@v4                
             - name: Discover all projects
               id: discover-all-projects
-              run: echo "projects=$find . -maxdepth 1 -type d ! -name .git ! -name .github ! -name docs ! -name . | sed 's|^\./||')" >> $GITHUB_OUTPUT
+              run: echo "projects=$(find . -maxdepth 1 -type d ! -name .git ! -name .github ! -name docs ! -name . | sed 's|^\./||')" >> $GITHUB_OUTPUT
 
     build:
         name: Build on ${{ matrix.os }}
