🚀 Deployed new features

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -1,10 +1,13 @@
 name: 🚀 Rust CI
 
 on:
-#   push:
-#     branches: [ main ]
-#   pull_request:
-#     branches: [ main ]
+  push:
+    branches: [ main ]
+    paths:
+        - '*/Cargo.toml'
+        - '*/Cargo.lock'
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
