--- a/hello-world/Cargo.toml
+++ b/hello-world/Cargo.toml
@@ -2,6 +2,12 @@
 name = "hello-world"
 version = "0.1.0"
 edition = "2021"
+description = "A Rust hello world project!"
+authors = ["Mohammad Zain Abbas <mohammadzainabbas@gmail.com>"]
+homepage = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/rust-axum-intro"
+repository = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/rust-axum-intro"
+keywords = ["rust", "rust-axum", "backend", "axum", "web-application"]
+categories = ["command-line-utilities"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
