--- a/guessing-game/Cargo.toml
+++ b/guessing-game/Cargo.toml
@@ -2,7 +2,12 @@
 name = "guessing-game"
 version = "0.1.0"
 edition = "2021"
-
+description = "A Rust backend project based on Axum web framework."
+authors = ["Mohammad Zain Abbas <mohammadzainabbas@gmail.com>"]
+homepage = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/rust-axum-intro"
+repository = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/rust-axum-intro"
+keywords = ["rust", "rust-axum", "backend", "axum", "web-application"]
+categories = ["command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
