--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -13,3 +13,7 @@ categories = ["command-line-utilities"]
 [dependencies]
 # Tokio runtime
 tokio = { version = "1.35.1", features = ["full"] }
+
+# CLI
+clap = { version = "4.4.18", features = ["derive"] }
+
