--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -17,3 +17,6 @@ tokio = { version = "1.35.1", features = ["full"] }
 # CLI
 clap = { version = "4.4.18", features = ["derive"] }
 
+[dev-dependencies]
+anyhow = "1.0.79"
+
