--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "1.35.1", features = ["full"] }
 
 # CLI
 clap = { version = "4.4.18", features = ["derive"] }
+async-trait = "0.1.77"
 
 [dev-dependencies]
 anyhow = "1.0.79"
