--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -21,6 +21,7 @@ clap = { version = "4.4.18", features = ["derive"] }
 async-trait = "0.1.77"
 
 [dev-dependencies]
+# Flexible concrete Error type built on std::error::Error
 anyhow = "1.0.79"
 httpc-test = "0.1.8"
 
