--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -19,6 +19,8 @@ clap = { version = "4.4.18", features = ["derive"] }
 
 # Type erasure for async trait methods
 async-trait = "0.1.77"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
 
 [dev-dependencies]
 # Flexible concrete Error type built on std::error::Error
