--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -23,6 +23,7 @@ async-trait = "0.1.77"
 # A generic serialization/deserialization framework
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
+serde_with = "3.4.0"
 
 [dev-dependencies]
 # Flexible concrete Error type built on std::error::Error
