--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -24,6 +24,8 @@ async-trait = "0.1.77"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 serde_with = "3.4.0"
+
+# Web framework that focuses on ergonomics and modularity
 axum = "0.7.4"
 
 [dev-dependencies]
