--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -27,6 +27,11 @@ serde_with = "3.4.0"
 
 # Web framework that focuses on ergonomics and modularity
 axum = "0.7.4"
+tower-http = { version = "0.5.1", features = ["fs"] }
+tower-cookies = "0.10.0"
+lazy-regex = "3.1.0"
+strum_macros = "0.25.3"
+uuid = "1.7.0"
 
 [dev-dependencies]
 # Flexible concrete Error type built on std::error::Error
