📲 Enhanced some features

--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -31,7 +31,7 @@ tower-http = { version = "0.5.1", features = ["fs"] }
 tower-cookies = "0.10.0"
 lazy-regex = "3.1.0"
 strum_macros = "0.25.3"
-uuid = "1.7.0"
+uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 # Flexible concrete Error type built on std::error::Error
