--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -34,6 +34,7 @@ tower-http = { version = "0.5.1", features = ["fs"] }
 # Cookie manager middleware for tower.
 tower-cookies = "0.10.0"
 
+# lazy static regular expressions checked at compile time
 lazy-regex = "3.1.0"
 
 strum_macros = "0.25.3"
