🔧 Tuned performance parameters for a new feature

--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -40,7 +40,7 @@ lazy-regex = "3.1.0"
 # Helpful macros for working with enums and strings
 strum_macros = "0.25.3"
 
-
+# A library to generate and parse UUIDs.
 uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
