--- a/hello-world/Cargo.toml
+++ b/hello-world/Cargo.toml
@@ -12,3 +12,4 @@ categories = ["command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.35.1", features = ["full"] }
