--- a/hello-world/Cargo.toml
+++ b/hello-world/Cargo.toml
@@ -13,3 +13,4 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 tokio = { version = "1.35.1", features = ["full"] }
+uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
