🧹 Cleaned up unnecessary module

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -10,6 +10,9 @@ on:
         - '*/Cargo.lock'
   pull_request:
     branches: [ main ]
+    paths:
+      - '*/Cargo.toml'
+      - '*/Cargo.lock'
   workflow_dispatch:
 
 jobs:
