🕵🏻 Conducted code review for a new module

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -7,6 +7,8 @@ on:
   #   branches: [main]
   #   paths: ['*/src/**', '*/Cargo.lock', '*/Cargo.toml']
   workflow_dispatch:
+    inputs:
+      
 
 jobs:
   check:
