🔍 Fixed typos in some improvements

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -8,7 +8,8 @@ on:
   #   paths: ['*/src/**', '*/Cargo.lock', '*/Cargo.toml']
   workflow_dispatch:
     inputs:
-      
+      project:
+        
 
 jobs:
   check:
