💡 Implemented innovative algorithm for data processing

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -11,6 +11,8 @@ on:
       project:
         type: choice
         description: Pick a project
+        required: true
+        default: 'hello-world'
         
 
 jobs:
