🎉 Celebrated completing a new module

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -13,7 +13,8 @@ on:
         description: Pick a project
         required: true
         default: 'hello-world'
-        
+        options:
+          - 
 
 jobs:
   check:
