--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -22,6 +22,8 @@ jobs:
   check:
     name: Cargo check
     runs-on: ubuntu-latest
+    defaults:
+      
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
