--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -23,7 +23,8 @@ jobs:
     name: Cargo check
     runs-on: ubuntu-latest
     defaults:
-      
+      run:
+        working_
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
