--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -25,6 +25,8 @@ jobs:
     defaults:
       run:
         working-directory: ${{ inputs.project }}
+      uses:
+        working-directory: ${{ inputs.project }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
