--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -33,7 +33,7 @@ jobs:
         id: cargo-check
         with:
           command: check
-          args:
+          args: --manifest-path ${{ inputs.project }}/Cargo.toml
 
   test:
     name: Cargo test
@@ -49,6 +49,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --manifest-path ${{ inputs.project }}/Cargo.toml
 
   fmt:
     name: Rustfmt
