--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -66,7 +66,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: fmt
-          args: --all -- --check
+          args: --manifest-path ${{ inputs.project }}/Cargo.toml --all -- --check
 
   clippy:
     name: Clippy
@@ -83,4 +83,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: -- -D warnings
+          args: --manifest-path ${{ inputs.project }}/Cargo.toml -- -D warnings
