--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -22,6 +22,9 @@ jobs:
   check:
     name: Cargo check
     runs-on: ubuntu-latest
+    strategy:
+      
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
