--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -23,7 +23,7 @@ jobs:
     name: Cargo check
     runs-on: ubuntu-latest
     strategy:
-      
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v2
