--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -25,8 +25,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        
-
+        project:
+          - 'hello-world'
+          - 'guessing-game'
+          - 'rust-axum-intro'
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
