--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -40,7 +40,7 @@ jobs:
         id: cargo-check
         with:
           command: check
-          args: --manifest-path ${{ inputs.project }}/Cargo.toml
+          args: --manifest-path ${{ matrix.project }}/Cargo.toml
 
   test:
     name: Cargo test
