🛡️ Strengthened a new module

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -6,9 +6,10 @@ on:
   pull_request:
     branches: [main]
     paths: ['*/src/**', '*/Cargo.lock', '*/Cargo.toml']
+  workflow_dispatch:
 
 jobs:
-  check:
+  ci:
     name: Cargo check
     runs-on: ubuntu-latest
     strategy:
