--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-      - name: 
+      - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
