--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -28,11 +28,12 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - uses: actions-rs/cargo@v1
+      - name: cargo check ${{ matrix.project }}
+        uses: actions-rs/cargo@v1
         id: cargo-check
         with:
           command: check
-          args: --manifest-path ${{ matrix.project || inputs.project }}/Cargo.toml
+          args: --manifest-path ${{ matrix.project }}/Cargo.toml
 
   test:
     name: Cargo test
