--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -34,6 +34,12 @@ jobs:
         with:
           command: check
           args: --manifest-path ${{ matrix.project }}/Cargo.toml
+      - name: cargo test ${{ matrix.project }}
+        uses: actions-rs/cargo@v1
+        id: cargo-test
+        with:
+          command: test
+          args: --manifest-path ${{ matrix.project }}/Cargo.toml
 
   test:
     name: Cargo test
