🔒 Enhanced security measures in the application

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -37,6 +37,7 @@ jobs:
       - name: cargo test ${{ matrix.project }}
         uses: actions-rs/cargo@v1
         id: cargo-test
+        if: ${{ success() }}
         with:
           command: test
           args: --manifest-path ${{ matrix.project }}/Cargo.toml
