--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -41,6 +41,13 @@ jobs:
         with:
           command: test
           args: --manifest-path ${{ matrix.project }}/Cargo.toml
+      - name: cargo fmt ${{ matrix.project }}
+        uses: actions-rs/cargo@v1
+        id: cargo-fmt
+        if: ${{ success() }}
+        with:
+          command: test
+          args: --manifest-path ${{ matrix.project }}/Cargo.toml
 
   fmt:
     name: Rustfmt
