👀 Reviewed and merged some modules

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -46,8 +46,8 @@ jobs:
         id: cargo-fmt
         if: ${{ success() }}
         with:
-          command: test
-          args: --manifest-path ${{ matrix.project }}/Cargo.toml
+          command: fmt
+          args: --manifest-path ${{ matrix.project }}/Cargo.toml --all -- --check
 
   fmt:
     name: Rustfmt
