--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -48,6 +48,14 @@ jobs:
         with:
           command: fmt
           args: --manifest-path ${{ matrix.project }}/Cargo.toml --all -- --check
+      - run: rustup component add rustfmt
+      - name: cargo fmt ${{ matrix.project }}
+        uses: actions-rs/cargo@v1
+        id: cargo-fmt
+        if: ${{ success() }}
+        with:
+          command: fmt
+          args: --manifest-path ${{ matrix.project }}/Cargo.toml --all -- --check
 
   fmt:
     name: Rustfmt
