🔧 Updated code for improved functionality

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -49,6 +49,7 @@ jobs:
         with:
           command: fmt
           args: --manifest-path ${{ matrix.project }}/Cargo.toml --all -- --check
+      - run: rustup component add clippy
       - name: cargo clippy ${{ matrix.project }}
         uses: actions-rs/cargo@v1
         id: cargo-clippy
