👀 Reviewed and merged new code

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -9,6 +9,8 @@ on:
   workflow_dispatch:
 
 jobs:
+  discover-projects:
+    
   ci:
     name: CI @ ${{ matrix.project }}
     runs-on: ubuntu-latest
