--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -10,7 +10,9 @@ on:
 
 jobs:
   discover-projects:
-    
+    runs-on: ubuntu-latest
+    steps:
+      
   ci:
     name: CI @ ${{ matrix.project }}
     runs-on: ubuntu-latest
