--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -12,8 +12,12 @@ jobs:
   discover-projects:
     runs-on: ubuntu-latest
     outputs:
-      
+      projects: ${{  }}
     steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+      - name: Discover all projects
+        id: 
 
   ci:
     name: CI @ ${{ matrix.project }}
