📈 Better workflow for some modules

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -17,7 +17,9 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
       - name: Discover all projects
-        id: 
+        id: discover-all-projects
+        run: |
+          
 
   ci:
     name: CI @ ${{ matrix.project }}
