--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Discover all projects
         id: discover-all-projects
         run: |
-          echo "projects=$(find . -maxdepth 1 -type d ! -name .git ! -name .github ! -name docs ! -name . | sed 's|^\./||')" >> $GITHUB_OUTPUT
+          echo "projects=$(find . -maxdepth 1 -type d ! -name .git ! -name .github ! -name docs ! -name . | sed 's|^\./||' | tr '\n' ' ')" >> $GITHUB_OUTPUT
 
   ci:
     name: CI @ ${{ matrix.project }}
