--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -12,7 +12,7 @@ jobs:
   discover-projects:
     runs-on: ubuntu-latest
     outputs:
-      projects: ${{  }}
+      projects: ${{ steps.discover-all-projects.outputs.projects }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
