--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -18,12 +18,14 @@ jobs:
         uses: actions/checkout@v4
       - name: Discover all projects
         id: discover-all-projects
+        shell: bash
         run: |
           echo "projects=$(find . -maxdepth 1 -type d ! -name .git ! -name .github ! -name docs ! -name . | sed 's|^\./||' | tr '\n' ' ')" >> $GITHUB_OUTPUT
 
   ci:
     name: CI @ ${{ matrix.project }}
     runs-on: ubuntu-latest
+    needs: [discover-projects]
     strategy:
       fail-fast: false
       matrix:
