🎭 Added support for new features

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        project: ${{ needs.discover-projects.outputs.projects }}
+        project: ${{ fromJSON(needs.discover-projects.outputs.projects) }}
           # - 'hello-world'
           # - 'guessing-game'
           # - 'rust-axum-intro'
