--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -21,7 +21,7 @@ jobs:
         shell: bash
         run: |
           projects=$(find . -maxdepth 1 -type d ! -name .git ! -name .github ! -name docs ! -name . | sed 's|^\./||' | tr '\n' ' ' | sed 's/ /,/g; s/^/[/; s/$/]/')
-          projects=
+          projects=${projects%,}
           echo "projects=$()" >> $GITHUB_OUTPUT
           # echo "projects=$(find . -maxdepth 1 -type d ! -name .git ! -name .github ! -name docs ! -name . | sed 's|^\./||' | tr '\n' ' ' | sed 's/ /,/g; s/^/[/; s/$/]/')" >> $GITHUB_OUTPUT
 
