--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -43,6 +43,7 @@ strum_macros = "0.26.1"
 # A library to generate and parse UUIDs.
 uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
+tracing = "0.1.40"
 
 [dev-dependencies]
 # Flexible concrete Error type built on std::error::Error
