--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -42,8 +42,10 @@ strum_macros = "0.26.1"
 
 # A library to generate and parse UUIDs.
 uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
+
+# For tracing and logging
 tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
 
 [dev-dependencies]
 # Flexible concrete Error type built on std::error::Error
