🔒 Enhanced some requirements

--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -45,6 +45,7 @@ uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
 
 # For tracing and logging
 tracing = "0.1.40"
+tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
 
 # For validations
