🛡️ Strengthened an improvement

--- a/rust-axum-intro/Cargo.toml
+++ b/rust-axum-intro/Cargo.toml
@@ -55,6 +55,7 @@ http-body-util = "0.1.0"
 [dev-dependencies]
 # Flexible concrete Error type built on std::error::Error
 anyhow = "1.0.79"
+http-body-util = "0.1.0"
 
 # Minimalistic HTTP Client Test Utilities
 httpc-test = "0.1.8"
